# spark

./: .gitignore  Cargo.toml  LICENSE  README.md  cft.toml.example  sdkconfig.defaults
scripts/: build.bat  flash.bat  monitor.bat
src/: bot_api.rs  config.rs  main.rs  wifi.rs
